--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -1,5 +1,6 @@
 <section data-ng-controller="IndexController">
   <h1 mean-token="'home-default'">This is the home view</h1>
   <h2>Welcome back, {{character.name}}</h2>
-  <p>You are a {{character.gender}}, and are currently a {{character.characterClass}}.</p>
+  <p>You are a {{character.gender}}, and are currently a {{character.characterClass.name}}.</p>
+  <p>{{ character.characterClass.description }}</p>
 </section>
