Adding twitter oauth strategy for testing because I am a moron

--- a/packages/system/public/views/index.html
+++ b/packages/system/public/views/index.html
@@ -3,5 +3,5 @@
   <h2>Welcome back, {{character.name}}</h2>
   <p>You are a {{character.gender}}, and are currently a {{character.characterClass.name}}.</p>
   <p>{{ character.characterClass.description }}</p>
-  <a href="/auth/fitbit">Connect your FitBit</a>
+  <a href="/auth/twitter">Connect your Twitter</a>
 </section>
