--- a/packages/users/public/views/login.html
+++ b/packages/users/public/views/login.html
@@ -1,7 +1,7 @@
 <div data-ng-controller="LoginCtrl">
   <div class="alert alert-danger animated fadeIn" ng-show="loginerror">{{loginerror}}</div>
-  <h1>Sign in</h1>
-  <form  ng-submit="login()" class="signin form-horizontal">
+  <h2>Sign in</h2>
+  <!--<form  ng-submit="login()" class="signin form-horizontal">
     <div class="form-group">
       <label for="email" class="col-md-4 control-label">Email</label>
       <div class="col-md-8">
@@ -25,5 +25,8 @@
         <a ui-sref='forgot-password'>Forgot your password?</a>
       </div>
     </div>
-  </form>
+  </form>-->
+  <p>
+  <a href="/auth/fitbit" class="btn btn-primary">Sign in or Register with Fitbit</a>
+  </p>
 </div>
